--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- 하는 일 -->
   <section id="do-it">
     <div class="do-it container">
-      <h2><span>클래식 헬퍼</span>는 딱 두가지를 도움드릴 수 있어요</h2>
+      <h2><span>클래식 헬퍼</span>는 딱 두가지 도움을 드릴 수 있어요</h2>
       <div class="whatwedo-card">
           <p>첫째. <i class="fa-solid fa-check"></i>
             <br>
